--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "semantic-ui-react": "^0.78.2"
   },
   "scripts": {
@@ -15,5 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
   }
 }
